Data Sanitization and Schema Validations

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "homepage": "https://github.com/shiveshgupta75/Connectify-Dev-BACKEND#readme",
   "dependencies": {
     "express": "^5.2.1",
-    "mongoose": "^9.1.5"
+    "mongoose": "^9.1.5",
+    "validator": "^13.15.26"
   }
 }
